--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
