--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "build": "npm i",
-    "dev": "nodemon server.js",
+    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
